# cpp-magic

./: README.md  ncrxml.py  ncxml.py
algorithms_experiences/avl_tree/: avltree.cpp  avltree.hpp  main.cpp
algorithms_experiences/basic_heap/: bh.cpp
algorithms_experiences/binary_search/: binary_search.cpp
algorithms_experiences/closest_pair_of_points/: closest_pair.cpp
algorithms_experiences/hash_using_chaining/: example.cpp
algorithms_experiences/hr/: insertion_sort_calc_effort.cpp
algorithms_experiences/matrix_strassen/: example.cpp  square_matrix.hpp
algorithms_experiences/merge_short_inv_counter/: ms_ic.cpp
algorithms_experiences/rb_tree/: rbtree.cpp
algorithms_experiences/rbtree/: rbtree.cpp
algorithms_experiences/tries/: CMakeLists.txt  main.cpp  trie.cpp
algorithms_experiences/tries/includes/: trie.hpp  tries.hpp
algorithms_experiences/union_find/: union_find.cpp
daemon_skeleton/: daemon.cpp
design_patterns/abs_factory/: abs_factory.cpp
design_patterns/bridge/: bridge.cpp
design_patterns/chain_of_responsability/: chain.cpp
design_patterns/command_pattern/: command.cpp
design_patterns/decorator/: decorator.cpp
design_patterns/memento/: memento.cpp
design_patterns/method_factory/: CMakeLists.txt  blue.cpp  blue.hpp  gen_item.hpp  gen_loader.hpp  main.cpp  msfactory.hpp  red.cpp  red.hpp
design_patterns/observer/: observer1.cpp  observer2.cpp
design_patterns/singleton/: meyer.h
design_patterns/slot_signals/: basic_signal.cpp  main.cpp  (+2 more)
slackchannel/: WORKSPACE
tcp/: slack_telnet.cpp
thread_pool/: legion.cpp  legion.h
(+30 files in other folders)
